--- a/pkg/vignettes/c060.bib
+++ b/pkg/vignettes/c060.bib
@@ -139,3 +139,40 @@
   pages = {301--320}
 }
 
+@INPROCEEDINGS{froehlich2005,
+  author = {Froehlich, H. and Zell, A.},
+  title = {Efficient parameter selection for support vector machines in classification and regression via model-based global optimization},
+  booktitle = {Proceedings of the International Joint Conference of Neural Networks},
+  year = {2005},
+  pages = {1431–-1438}
+}
+
+@article{bovelstad07,
+  Author = {B{\o}velstad, H M  M  and Nyg\r{a}rd, S   and St{\o}rvold, H L  L.  and Aldrin, M   and Borgan, O   and Frigessi, A   and Lingj{\ae}rde, O C  C. },
+	Date-Modified = {2009-11-10 16:31:32 +0100},
+	Journal = {Bioinformatics},
+	Pages = {2080--2087},
+	Title = {Predicting survival from microarray data - a comparative study.},
+	Volume = 23,
+	Year = {2007}}
+
+@article{verweij94,
+  Author = {Verweij, Pierre J. M. and van Houwelingen, Hans C.},
+	Date-Modified = {2009-02-23 22:22:20 +0100},
+	Journal = {Statistics in Medicine},
+	Keywords = {Cross-validation; Partial likelihood},
+	Pages = {2427--2436},
+	Title = {Penalized Likelihood in {C}ox Regression},
+	Volume = {13},
+	Year = {1994}}
+
+@article{verweij93,
+	Author = {Verweij, Pierre J. M. and van Houwelingen, Hans C.},
+	Date-Modified = {2009-02-23 22:22:31 +0100},
+	Journal = {Statistics in Medicine},
+	Keywords = {Proportional hazard; prediction},
+	Pages = {2305--2314},
+	Title = {Cross-validation in Survival Analysis},
+	Volume = {12},
+	Year = {1993}}
+
