stability.path.Rd + stabilityselection Beschreibung
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@27 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/vignettes/c060.bib
+++ b/pkg/vignettes/c060.bib
@@ -1,6 +1,40 @@
 % This file was created with JabRef 2.7.
 % Encoding: UTF-8
 
+@ARTICLE{Dudoit2003,
+  author = {Dudoit, Sandrine and Shaffer, Juliet P. and Boldrick, Jennifer C.},
+  title = {{Multiple Hypothesis Testing in Microarray Experiments}},
+  journal = {Statistical Science},
+  year = {2003},
+  volume = {18},
+  pages = {71--103},
+  number = {1},
+  abstract = {{DNA} microarrays are part of a new and promising class of biotechnologies
+  that allow the monitoring of expression levels in cells for thousands
+	of genes simultaneously. An important and common question in {DNA}
+	microarray experiments is the identification of differentially expressed
+	genes, that is, genes whose expression levels are associated with
+	a response or covariate of interest. The biological question of differential
+	expression can be restated as a problem in multiple hypothesis testing:
+	the simultaneous test for each gene of the null hypothesis of no
+	association between the expression levels and the responses or covariates.
+	As a typical microarray experiment measures expression levels for
+	thousands of genes simultaneously, large multiplicity problems are
+	generated. This article discusses different approaches to multiple
+	hypothesis testing in the context of {DNA} microarray experiments
+	and compares the procedures on microarray and simulated data sets.},
+  citeulike-article-id = {5909123},
+  citeulike-linkout-0 = {http://dx.doi.org/10.2307/3182872},
+  citeulike-linkout-1 = {http://www.jstor.org/stable/3182872},
+  doi = {10.2307/3182872},
+  issn = {08834237},
+  keywords = {fdr},
+  posted-at = {2010-05-14 20:25:40},
+  priority = {2},
+  publisher = {Institute of Mathematical Statistics},
+  url = {http://dx.doi.org/10.2307/3182872}
+}
+
 @article{MeinshausenBuehlmann2010,
  title={Stability selection}, volume={72},
  url={http://doi.wiley.com/10.1111/j.1467-9868.2010.00740.x}, number={4}, journal={Journal of the Royal Statistical Society - Series B: Statistical Methodology}, publisher={Wiley Online Library}, author={Meinshausen, Nicolai and B\"uhlmann, Peter}, year={2010}, pages={417--473}}
