git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@28 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/vignettes/c060.bib
+++ b/pkg/vignettes/c060.bib
@@ -210,3 +210,24 @@
 	Volume = {12},
 	Year = {1993}}
 
+@article{efron1997,
+  title={Improvements on cross-validation: The. 632+ bootstrap method},
+  author={Efron, B. and Tibshirani, R.},
+  journal={Journal of the American Statistical Association},
+  pages={548--560},
+  year={1997},
+  publisher={JSTOR}
+}
+
+
+@article{gerds2006,
+  title={Consistent Estimation of the Expected Brier Score in General Survival Models with Right-Censored Event Times},
+  author={Gerds, T.A. and Schumacher, M.},
+  journal={Biometrical Journal},
+  volume={48},
+  number={6},
+  pages={1029--1040},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
