--- a/pkg/vignettes/c060_vignette.Rnw
+++ b/pkg/vignettes/c060_vignette.Rnw
@@ -183,6 +183,25 @@ which can be controlled by reducing the length of the regularization path $\Lamb
 choosing $\Lambda$ such that $q_{\Lambda} \leq \sqrt{0.6p}$ will control $E(V)=1$. Moreover, by choosing $\Lambda$ so that $q_{\Lambda} \leq \sqrt{0.6p\alpha}$ will control the family wise error rate (FWER) at level $\alpha$, $P(|V|>0) \leq \alpha$.
 
 \subsection{Prediction error curves for survival models}
+
+The time-dependent Brier Score \citep{graf99} can be used to assess and compare the prediction accuracy of prognostic model.
+The Brier Score at time point $t$ is a weighted mean squared error between predicted survival probability and observed survival status.
+Weighting depends on the estimated censoring distribution to account for the observations under risk or more general estimates
+thereof \citep{gerds2006}. Computing the error for each time point over the entire follow-up horizon yields a predicton error curve.
+Prediction errors based on the Kaplan-Meier estimates ignoring any additional covariate information function as reference. 
+
+The empirical time-dependent Brier score $BS(t)$ is defined as a function of time $t > 0$ by
+\[
+BS(t) = \frac{1}{n}\sum_{i=1}^{n}{\left[\frac{\hat{S}(t|x_i)^2I(t_i\leq t \wedge \delta_i=1)}{\hat{G}(t_i)} + \frac{(1-\hat{S}(t|x_i))^2I(t_i>t)}{\hat{G}(t)}\right]},
+\]
+with individual survival time $t_i$, censoring indicator $\delta_i$ and estimated survival probability $\hat{S}(t|x_i)$ at time $t$ based on the prognostic model given covariate values $x_i$.
+$\hat G(t)$ denotes the Kaplan-Meier estimate of the censoring distribution which is based on the observations $(t_i; 1-\delta_i$), 
+$I$ stands for the indicator function. 
+
+In case no independent validation data are available, resampling-based prediction error curves are used to adequately assess the accuracy.
+The $.632+$ bootstrap estimator \citep{efron1997}, which is a weighted sum of the apparent error and the average out-of-bag bootstrap error, can be used in this context, balancing a too optimistic and a too conservative error estimation.
+
+
 <<setup, echo=F, results=hide>>=
 rm(list=ls())
 
@@ -204,10 +223,10 @@ library(mlegp) #for EPSGO.R
 library(pamr) #for tune.glmnet.interval.R
 
 # R functions required
-source("~/c060/pkg/R/peperr_glmnet.r")
-source("~/c060/pkg/R/stabilityselection.R")
-source("~/c060/pkg/R//tune_glmnet_interval.R")
-source("~/c060/pkg/R/EPSGO.R")
+source("../R/peperr_glmnet.r")
+source("../R/stabilityselection.R")
+source("../R/tune_glmnet_interval.R")
+source("../R/EPSGO.R")
 
 dir.create("figures",showWarnings = FALSE)
 
@@ -339,133 +358,46 @@ We defined additional wrapper functions for the \texttt{glmnet} algorithm for fi
 and predicting survival probabilities (\texttt{predictProb.glmnet}) based on the fitted model and the estimated baseline hazard from the training data. 
 
 We estimate the $L_1$-penalized Cox PH regression model for overall survival starting with the 10.000 most varying probe sets using \texttt{glmnet}. 
-The $.632+$ bootstrap estimator is calculated based on subsampling \citep{BS2008} using only 20 bootstrap samples for illustration.
+The $.632+$ bootstrap estimator is calculated based on subsampling \citep{BS2008} using only 100 bootstrap samples for illustration.
 
-<<peperr, echo=T, results=hide, cache=T>>=
-peperr_obj <- peperr(response=Surv(eset$os, eset$os_status), x=t(exprs(eset)),
-                     fit.fun=fit.glmnet,args.fit=list(standardize=F, family="cox"),
-                     complexity=complexity.glmnet, args.complexity=list(standardize=F, family="cox", nfolds=10),
-                     trace=F, RNG="fixed",seed=0815, 
-                     indices=resample.indices(n=dim(eset)[2], sample.n = 20, method = "sub632"))
+The \texttt{peperr} package is designed for high-dimensional covariates data and allows for various set-ups of parallel computations.
+Also, additional arguments can be passed directly to the \texttt{glmnet} call by specifing additional arguments for the fitting and/or tuning procedure.
+Here, we include patient's age as mandatory model variable into the prognostic model, i.e. age is not subject to penalization, and 
+run the calculation on 3 CPUs in parallel using a socket cluster set-up.
+
+<<peperrMandatoryParallel, echo=T, results=hide, cache=T>>=
+obj  <- peperr(response=Surv(eset$os, eset$os_status),
+         x=data.frame(eset$age,t(exprs(eset))),
+         fit.fun=fit.glmnet,args.fit=list(standardize=F,family="cox", 
+         penalty.factor=rep(0:1,times=c(1,dim(eset)[1]))),
+         complexity=complexity.glmnet,
+         args.complexity=list(standardize=F,nfolds=10,
+         family="cox",penalty.factor=rep(0:1,times=c(1,dim(eset)[1]))),
+         trace=F,RNG="fixed",seed=0815,cpus=3,parallel=T,clustertype="SOCK", 
+         load.list=list(functions=c("basesurv")),
+         indices=resample.indices(n=dim(eset)[2],sample.n=100,method="sub632"))
 @
 
 Individual bootstrap results can be visualized with the \texttt{plot.peperr} function from the \texttt{peperr} package showing the selected complexity parameters, 
 out-of-bag prediction error curves as well as the prediction error integrated over time, and the predictive partial log-likelihood (PLL) values. In order to calculate the predictive PLL values again an algorithm specific wrapper (here \texttt{PLL.coxnet}) needs to be defined.
 
-In addition, we provide a slightly modified version of the prediction error curves plot function from the \texttt{peperr} package which allows to display the number still at risk (\texttt{plot.peperr.curves}) as shown in figure \ref{fig:pec1}. 
+In addition, we provide a slightly modified version of the prediction error curves plot function from the \texttt{peperr} package which allows to display the number still at risk (\texttt{plot.peperr.curves}) as shown in figure \ref{fig:pec}. 
 
 \begin{figure}
-<<peperrPlot, echo=T, results=hide, fig=TRUE, width=12, height=10>>=
-plot.peperr.curves(peperr_obj, at.risk=T)
+<<peperrPlot, echo=T, results=hide, fig=TRUE>>=
+plot.peperr.curves(obj, at.risk=T)
 @
-\caption{Prediction error curves}
-\label{fig:pec1}
+\caption{Prediction error curves based on time-dependent Brier score.}
+\label{fig:pec}
 \end{figure}
 
-The \texttt{peperr} package is designed for high-dimensional covariates data and allows for various types of parallel computations.
-Here, we re-run the calculations on 3 CPUs in parallel using a socket cluster on a Windows OS.
-
-<<peperrParallel, echo=T, results=hide, cache=T>>=
-peperr_obj_parallel <- peperr(response=Surv(eset$os, eset$os_status), x=t(exprs(eset)),
-                              fit.fun=fit.glmnet,args.fit=list(standardize=F, family="cox"),
-                              complexity=complexity.glmnet, args.complexity=list(standardize=F, family="cox", nfolds=10),
-                              trace=F, RNG="fixed",seed=0815, cpus=3, parallel=T, clustertype="SOCK", 
-                              load.list=list(functions=c("basesurv")),
-                              indices=resample.indices(n=dim(eset)[2], sample.n = 20, method = "sub632"))
-@
-
-<<peperrParallelPlot, echo=F, results=hide, fig=F, width=12, height=10>>=
-plot.peperr.curves(peperr_obj_parallel, at.risk=T)
-@
-
-Additional arguments can be passed directly to the \texttt{glmnet} call by specifing additional arguments for the fitting or tuning procedure.
-Here, we include patient's age as mandatory model variable into the prognostic model, i.e. age is not subject to penalization.
-
-<<peperrMandatoryParallel, echo=T, results=hide, cache=T>>=
-peperr_obj_parallel_mandatory  <- peperr(response=Surv(eset$os, eset$os_status), x=data.frame(eset$age,t(exprs(eset))),
-                                          fit.fun=fit.glmnet,args.fit=list(standardize=F, family="cox", 
-                                                                           penalty.factor=rep(0:1,times=c(1,dim(eset)[1]))),
-                                          complexity=complexity.glmnet, args.complexity=list(standardize=F, nfolds=10, family="cox",
-                                                                                             penalty.factor=rep(0:1,times=c(1,dim(eset)[1]))),
-                                          trace=F, RNG="fixed",seed=0815, cpus=3, parallel=T, clustertype="SOCK", 
-                                          load.list=list(functions=c("basesurv")),
-                                          indices=resample.indices(n=dim(eset)[2], sample.n = 20, method = "sub632"))
-@
-
-<<peperrMandatoryParallelPlot, echo=F, results=hide, fig=F, width=12, height=10>>=
-lines(peperr_obj$attribute,perr(peperr_obj,"632p"),lty=1,col=6)
-@
-
-For classification models, the same wrapper functions for fitting and tuning the model are called.
+Note, that for classification models, the same wrapper functions for fitting and tuning the model are called.
 Model performance measures shipped with the \texttt{peperr} packages are misclassification rate and Brier score.
 
 We  extended functionality of the Brier score (\texttt{aggregation.brier}) and misclassification rate (\texttt{aggregation.misclass}) 
 calculation for the \texttt{glmnet} algorithm, and defined AUC under the ROC curve (\texttt{aggregation.auc}) as additional performance measure.
 For binary responses, the \texttt{peperr} package does not quite provide the same modular flexibility 
-as for time-to-event endpoints. The predicted class probability is calculated within the performance/aggregation function by calling the algorithm specific predict function.
-Whenever a new algorithm is incorporated the aggregation function has to be modified and overwritten accordingly.
-
-For illustration purpose only we use survival status as binary response variable and build the $L_1$-penalized logistic regression model with \texttt{glmnet}.
-All three prediction accuracy measures are calculated. Again, computations are run in parallel.
-Results of 20 bootstrap runs are displayed in plain boxplots (figure \ref{fig:pebin1}).
-
-<<peperrBinaryParallel, echo=F, results=hide, cache=T>>=
-peperr_obj_parallel_binary_brier  <- peperr(response=eset$os_status, x=t(exprs(eset)),
-                                            fit.fun=fit.glmnet,args.fit=list(standardize=F, family="binomial"),
-                                            complexity=complexity.glmnet, args.complexity=list(standardize=F, family="binomial", nfolds=10),
-                                            trace=F, RNG="fixed",seed=0815, cpus=3, parallel=T, clustertype="SOCK", 
-                                            aggregation.fun=aggregation.brier,
-                                            indices=resample.indices(n=dim(eset)[2], sample.n = 20, method = "sub632"))
-
-peperr_obj_parallel_binary_misclass  <- peperr(response=eset$os_status, x=t(exprs(eset)),
-                                               fit.fun=fit.glmnet,args.fit=list(standardize=F, family="binomial"),
-                                               complexity=complexity.glmnet, args.complexity=list(standardize=F, family="binomial", nfolds=10),
-                                               trace=F, RNG="fixed",seed=0815, cpus=3, parallel=T, clustertype="SOCK", 
-                                               aggregation.fun=aggregation.misclass,
-                                               indices=resample.indices(n=dim(eset)[2], sample.n = 20, method = "sub632"))
-
-peperr_obj_parallel_binary_auc  <- peperr(response=eset$os_status, x=t(exprs(eset)),
-                                          fit.fun=fit.glmnet,args.fit=list(standardize=F, family="binomial"),
-                                          complexity=complexity.glmnet, args.complexity=list(standardize=F, family="binomial", nfolds=10),
-                                          trace=F, RNG="fixed",seed=0815, cpus=3, parallel=T, clustertype="SOCK", 
-                                          aggregation.fun=aggregation.auc,
-                                          indices=resample.indices(n=dim(eset)[2], sample.n = 20, method = "sub632"))
-@
-
-\begin{figure}
-<<peperrBinaryPlot, echo=F, results=hide, fig=TRUE, width=12, height=10 >>=
-bootsamples  <- data.frame(type  = rep(c("Brier Score","Misclassification Rate","AUC"),each=20),
-                           error = c(unlist(peperr_obj_parallel_binary_brier$sample.error),
-                                     unlist(peperr_obj_parallel_binary_misclass$sample.error),
-                                     unlist(peperr_obj_parallel_binary_auc$sample.error)))
-
-hline_data   <- data.frame(type  = rep(c("Brier Score","Misclassification Rate","AUC"),each=4),
-                           error= rep(c("mean\nout-of-bag",".632plus","apparent","null model"),3),
-                                     # aggregated Brier score
-                           at    = c(perr(peperr_obj_parallel_binary_brier,"resample"),
-                                     perr(peperr_obj_parallel_binary_brier,"632p"),
-                                     perr(peperr_obj_parallel_binary_brier,"app"),
-                                     perr(peperr_obj_parallel_binary_brier,"nullmodel"),
-                                     # aggregated misclassification
-                                     perr(peperr_obj_parallel_binary_misclass,"resample"),
-                                     perr(peperr_obj_parallel_binary_misclass,"632p"),
-                                     perr(peperr_obj_parallel_binary_misclass,"app"),
-                                     perr(peperr_obj_parallel_binary_misclass,"nullmodel"),
-                                     # aggregated AUC
-                                     perr(peperr_obj_parallel_binary_auc,"resample"),
-                                     perr(peperr_obj_parallel_binary_auc,"632p"),
-                                     perr(peperr_obj_parallel_binary_auc,"app"),
-                                     perr(peperr_obj_parallel_binary_auc,"nullmodel")))
-
-p    <- ggplot(bootsamples, aes(type,error))
-pg   <- p + geom_boxplot(outlier.colour = rgb(0,0,0,0), outlier.size=0) + geom_jitter(position=position_jitter(width=.05)) + 
-        theme_bw() + scale_y_continuous("") +  scale_x_discrete("") + facet_wrap(~ type, scales="free") +
-        geom_hline(aes(yintercept=at, x=type, colour=error), hline_data, show_guide=TRUE) + opts(legend.position = "bottom")
-print(pg)
-@
-\caption{Different bootstrap performance measures for binary classification}
-\label{fig:pebin1}
-\end{figure}
+as for time-to-event endpoints. The predicted class probability is calculated within the performance/aggregation function by calling the algorithm specific predict function. Whenever a new algorithm is incorporated the aggregation function has to be modified and overwritten accordingly.
 
 \clearpage
 \subsection{Stability selection}
@@ -474,8 +406,7 @@ print(pg)
 <<stabilitySelection, echo=F, results=hide, fig=TRUE>>=
 set.seed(1234)
 y <- cbind(time=pData(eset)$os, status=pData(eset)$os_status)
-### parallel computing not enabled on Windows
-cores <- 2; if (sessionInfo()$platform=="x86_64-pc-mingw32/x64 (64-bit)") cores <- 1
+cores <- 2
 res <- stability.path(y=y, x=t(exprs(eset)), weakness=1, mc.cores=cores, family="cox")
 par(mar=c(4,4,2,1), mgp=c(2.5,1,0))
 sel <- plot.stabpath(res, fwer=0.2, pi_thr=0.5, xvar="lambda", col.all="gray")
