--- a/pkg/vignettes/c060_vignette.Rnw
+++ b/pkg/vignettes/c060_vignette.Rnw
@@ -60,10 +60,11 @@
 \SweaveOpts{prefix.string=figures/fig, eps=FALSE}
 %Because eps=FALSE, all graphics are created as pdf graphics only. This implies that the resulting tex document needs to be compiled with pdflatex rather than with latex.
 
-\title{C060 Vignette}
+\title{Extended inference for lasso and elastic-net regularized Cox and generalized linear models}
+%\title{Extended functionalities for lasso and elastic-net regularized Cox and generalized linear models}
+%\title{An \R{} package for extended functionalities for lasso and elastic-net regularized Cox and generalized linear models}
 \author{Martin Sill, Thomas Hielscher, Natalia Becker, Manuela Zucknick}
-
-\address{}
+\address{Division of Biostatistics, German Cancer Research Center, Im Neuenheimer Feld 280, 69120 Heidelberg, Germany}
 
 %% use optional labels to link authors explicitly to addresses:
 %% \author[label1,label2]{<author name>}
@@ -71,7 +72,12 @@
 %% \address[label2]{<address>}
 
 \begin{abstract}
-%% Text of abstract
+We have developed an \R{} package \texttt{c060} with the aim of improving \R{} software functionality for high-dimensional risk prediction modelling, in particular for prognostic modelling of patient survival data using high-throughput genomic data. 
+
+Penalized regression models such as implemented in the popular CRAN package \texttt{glmnet} provide a statistically appealing method to build prediction models from high-dimensional data sources. The \texttt{glmnet} package provides an efficient state-of-the-art algorithm for fitting penalized Cox and generalized linear models. However, in a practical application the data analysis will not stop at the point, where the model has been fitted. One is for example interested in the stability of selected features or in assessing the prediction performance of a model and we provide functions to deal with both of these tasks with the possibility of speeding up computing time thorugh parallel computing. Another feature that we provide is an approach to select the optimal parameter combination for elastic net penalties using an efficient interval-search algorithm.
+
+These functions have been useful in our daily work here at the German Cancer Research 
+Center where prognostic modelling of patient survival data is of particular interest. Although we focus on a survival data application of penalized Cox PH regression models in this article, the functions in our \R{} package are applicable to all types of regression models implemented in the \texttt{glmnet} package.
 
 \end{abstract}
 
@@ -96,7 +102,7 @@ approaches to estimate penalized regression models with lasso, ridge or elastic 
 
 This algorithm has also been implemented in \R{} in the \texttt{glmnet} package. The package provides functions to tune and fit regression models, 
 plot the results, and make predictions. However, in practical applications, where often an independent validation data set is lacking, some additional features and routines are desirable as part of a complete data analysis. We have assembled some functions that enhance the existing functionality of the \texttt{glmnet} package or
-allow to use it within the framework of other existing \R{} packages. These functions have been useful in our daily work here at the German Cancer Research 
+allow to use it within the framework of other existing \R{} packages. These functions have been useful in our daily work at the German Cancer Research 
 Center where prognostic modelling of patient survival data is of particular interest. Therefore, for illustration purposes we focus on penalized Cox PH regression models in this article. But most of the functions are applicable to all types of regression models implemented in the \texttt{glmnet} package.
 
 We provide \R{} functions to perform stability selection \citep{MeinshausenBuehlmann2010} in a computationally efficient way using \texttt{glmnet} which allows to select the most stable features at a given error level. We also provide an approach to select the optimal parameter combination ($\alpha$, $\lambda$) for elastic net penalties using an interval-search algorithm \citep{froehlich2005} which is often faster and more accurate than a standard grid search (Ref for a comparison study?). Another very useful addition for real-life applications of \texttt{glmnet} for building prognostic models is the provision of wrapper functions to allow the computation of resampling-based prediction error curves with the framework of the \R{} package \texttt{peperr} \citep{Porz2009}. The \texttt{peperr} package makes it computationally feasible to assess the
@@ -108,23 +114,20 @@ Throughout this article we use the gene expression data set on cytogenetically n
 The data set contains gene expression data for 79 patient samples measured with Affymetrix HG-U133 Plus 2.0 microarrays. The median survival time of these 79 patients was 17.6 months with 40\% censoring.
 
 \section{Methods and algorithms}
-\commentMZ{What we need here is not just the description of the statistical methods, but also of the specific algorithms that are implemented in the R package.}
 
 \subsection{Penalized generalized linear models and Cox models}\label{methods:penalized}
 An efficient implementation for fitting generalized linear models and Cox proportional hazards models with regularization by the lasso or elastic net penalty terms is provided by the \R{} package \texttt{glmnet} \citep{FHT2010, simon2011}. This implementation uses a coordinate descent algorithm for fitting the models for a specified penalty parameter value $\lambda$. The computation of an entire regularization path across a range of values $\{\lambda_1,\lambda_2...,\lambda_k\}$ with \texttt{glmnet} is very fast, because previously computed solutions for $\{\lambda_1,...,\lambda_{j-1}\}$ are used as a 'hot' starting value for the computation of $\lambda_j$.
 
 Models are fitted by maximizing the penalized log-likelihood function for generalized linear models and the penalized partial log-likelihood for Cox models. Cross-validation can be performed to decide which model (i.e. which penalty parameter values) to choose by using the cross-validated (partial) log-likelihood as the loss function.
-\commentMZ{Is the approach by \citet{verweij93} used for Cox models?}
-\commentMZ{The remainder of the text in this section \ref{methods:penalized} is from the Benner et al. (2010) paper and needs to be rewritten and adapted to this manuscript.}
 
 The penalized (partial) log-likelihood is given by
 \begin{equation}\label{pen.part.likelihood}
 l_n(\boldsymbol\beta)- \sum_{j=1}^p  p_{\lambda^*}(|\beta_j|)
 \end{equation}
 where $l_n(\boldsymbol\beta)$ denotes the (partial) log-likelihood given $n$ observations.
-The dimension of the parameter vector $\boldsymbol\beta$ is $p$ and $p_\lambda(|\cdot|)$ is the penalty function with tuning parameter $\lambda^*$. Correspondingly, the objective function employed in \texttt{glmnet} is (with $\lambda = \lambda^*/n$):
+The dimension of the parameter vector $\boldsymbol\beta$ is $p$ and $p_\lambda(|\cdot|)$ is the penalty function with tuning parameter $\lambda^*$. Correspondingly, the objective function employed in \texttt{glmnet} is (with $\lambda = \frac{2}{n}\lambda^*$):
 \begin{equation}\label{obj.fun}
-- l_n(\boldsymbol\beta)/n + \sum_{j=1}^p  p_\lambda(|\beta_j|).
+- \frac{2}{n}l_n(\boldsymbol\beta) + \sum_{j=1}^p  p_\lambda(|\beta_j|).
 \end{equation}
 
 \subsection{$L_2$-penalized Cox regression}
@@ -133,9 +136,8 @@ Penalized maximum likelihood estimation in Cox regression with the ridge penalty
 p_\lambda(|\beta|)=\lambda\beta^2
 \end{equation}
 was introduced by \citet{verweij94}.
-Ridge penalized regression does not perform model selection and results in downwardly biased parameter estimates.
-On the other hand, it has been found to produce models with good prediction performance in high-dimensional genomic
-applications \citep[e.g.][]{bovelstad07}.
+The ridge penalty results in parameter estimates that are biased towards zero, but does not set values to exactly zero, and hence does not perform variable selection.
+On the other hand, it has been found to produce models with good prediction performance in high-dimensional genomic applications \citep[e.g.][]{bovelstad07}, in particular if predictors are highly correlated.
 
 \subsection{$L_1$-penalized Cox regression}
 \Citet{tibshirani97} proposed to use an $L_1$-penalized Cox model with
@@ -143,7 +145,7 @@ applications \citep[e.g.][]{bovelstad07}.
 p_\lambda(|\beta|)=\lambda | \beta |
 \end{equation}
 and described a technique, called the lasso for ''least absolute shrinkage and selection operator'', for parameter estimation.
-The $L_1$-penalty has the advantage over the $L_2$-penalty of shrinking some of the coefficients to zero, i.e. it has an in-built variable selection procedure.
+The $L_1$-penalty has the advantage over the $L_2$-penalty of shrinking some of the coefficients to zero, i.e. it performs automatic variable selection.
 
 \subsection{The elastic net}
 \Citet{zou05} introduced the elastic net, which employs a combination of the $L_1$- and $L_2$-penalty
@@ -151,14 +153,15 @@ The $L_1$-penalty has the advantage over the $L_2$-penalty of shrinking some of 
 p_{\lambda_1,\lambda_2}(|\beta|)=\lambda_1 | \beta | + \lambda_2 \beta ^2.
 \end{equation}
 \Citet{zou05} rescale the initial solutions from the optimization of the doubly-penalized log-likelihood function by the factor $1 + \lambda_2$, in order to reduce the effect of the double shrinkage.
-The elastic net performs variable selection and parameter estimation equivalently to the lasso.
+Like lasso the elastic net performs automatic variable selection by setting some coefficient estimates to zero.
 But the additional $L_2$-penalty term distributes the weight to more variables, such that the elastic net tends to select more variables than the lasso. 
-This is especially the case in situations with high correlation, where the lasso would select only one variable of a set of highly correlated variables.
+This is especially the case in situations with high correlation, where the lasso would select only one variable of a set of highly correlated variables, while the ridge penalty would give them equal weight.
 
 Throughout this manuscript we use an alternative parametrization of the elastic net penalty function equivalently to the formulation used in the \texttt{glmnet} package:
 \begin{equation}\label{enet2}
 p_{\alpha,\lambda}(|\beta|)= \lambda\times ( (1-\alpha)\frac{1}{2} |\beta|^2 + \alpha |\beta|).
 \end{equation}
+Here, $\alpha \in [0,1]$ determines the influence of the $L_1$ penalty relative to the $L_2$ penalty. Small $\alpha$ values will result in models with many variables, getting closer to the non-sparse ridge solution as $\alpha$ tends to zero.
 
 \subsubsection{The interval-search algorithm to select the optimal elastic net parameter combination}
 
@@ -275,6 +278,7 @@ eset       <- geo_exprs_data[topprobes,]
 \subsection{Starting off: Lasso-penalised Cox model} 
 
 \begin{figure}
+\begin{center}
 <<glmnet, echo=F, results=hide, fig=TRUE, height=4>>=
 set.seed(1234)
 y <- cbind(time=pData(eset)$os, status=pData(eset)$os_status)
@@ -287,6 +291,7 @@ names.cof <- rownames(cof)
 cofn <- cof[which(cof!=0)]
 names(cofn) <- names.cof[which(cof!=0)]
 @
+\end{center}
 \caption{\label{fig:cvlasso}Cross-validated partial log-likelihood function, including upper and lower standard deviations, as a function of $\log{\lambda}$ for the AML data set.}
 \end{figure}
 
@@ -304,6 +309,7 @@ print(cofn)
 The selected features are highlighted as red lines in the coefficient paths shown in Figure \ref{fig:coefpath}. The coefficient path shows the development of the regression coefficient estimates with increasing regularization.
 
 \begin{figure}
+\begin{center}
 <<glmnet3, echo=F, results=hide, fig=TRUE, height=7, width=7>>=
 bet <- res$beta[match(names(cofn), rownames(res$beta)),]
 par(mar=c(4,4,2.5,1), mgp=c(2.5,1,0), mfrow=c(2,2))
@@ -329,6 +335,7 @@ glmnet:::plotCoef(bet, lambda = res$lambda, df = res$df, dev = res$dev.ratio, xv
 abline(v=res$dev.ratio[match(cvres$lambda.min, cvres$lambda)], lty=3)
 abline(v=res$dev.ratio[match(cvres$lambda.1se, cvres$lambda)], lty=3)
 @
+\end{center}
 \caption{\label{fig:coefpath}Coefficient paths for lasso penalised Cox PH regression model applied to the AML data set.}
 \end{figure}
 
@@ -339,6 +346,8 @@ abline(v=res$dev.ratio[match(cvres$lambda.1se, cvres$lambda)], lty=3)
 
 \subsection{Resampling based prediction errors}
 \label{pec}
+
+\commentMZ{Start of this section by explaining what would be done to assess the prediction performance of other types of models (LM and GLM), why survival data is special, and why we don't need a new R function for LM/GLM models.}
 
 Once the final prognostic model is selected, we need to assess its prediction accuracy for future patients, frequently also in comparison
 with established clinico-pathological prognostic markers. In many applications no independent validation data set is available.
@@ -384,9 +393,11 @@ out-of-bag prediction error curves as well as the prediction error integrated ov
 In addition, we provide a slightly modified version of the prediction error curves plot function from the \texttt{peperr} package which allows to display the number still at risk (\texttt{plot.peperr.curves}) as shown in figure \ref{fig:pec}. 
 
 \begin{figure}
+\begin{center}
 <<peperrPlot, echo=T, results=hide, fig=TRUE>>=
 plot.peperr.curves(obj, at.risk=T)
 @
+\end{center}
 \caption{Prediction error curves based on time-dependent Brier score.}
 \label{fig:pec}
 \end{figure}
@@ -403,6 +414,7 @@ as for time-to-event endpoints. The predicted class probability is calculated wi
 \subsection{Stability selection}
 
 \begin{figure}
+\begin{center}
 <<stabilitySelection, echo=F, results=hide, fig=TRUE>>=
 set.seed(1234)
 y <- cbind(time=pData(eset)$os, status=pData(eset)$os_status)
@@ -413,6 +425,7 @@ sel <- plot.stabpath(res, fwer=0.2, pi_thr=0.5, xvar="lambda", col.all="gray")
 #sel <- plot.stabpath(res, fwer=0.2, pi_thr=0.5, xvar="norm")
 #sel <- plot.stabpath(res, fwer=0.2, pi_thr=0.5, xvar="dev")
 @
+\end{center}
 \caption{\label{fig:stabpath}Coefficient and stability paths for lasso penalised Cox PH regression model applied to the AML data set.}
 \end{figure}
 
@@ -455,7 +468,7 @@ The parameter space of tuning parameters is defined as follows:
 <<interval_search_cox_pre, echo=F>>=
 print(bounds)
 @
-The second tuning parameter $\lambda$ will be found for each given $\alpha$ via regularization path.  Thus, the two dimensional parameter space has the form $\left(0, 1\right) \times \mathbb{R}$. The seed is \Sexpr{seed}. For each given $\alpha$ an optimal lambda is definded as largest value of lambda such that error is within 1 standard error of the minimum. (parameter  type.min = 'lambda.1se').
+The second tuning parameter $\lambda$ will be found for each given $\alpha$ via regularization path.  Thus, the two dimensional parameter space has the form $\left(0, 1\right) \times \boldsymbol{R}$. The seed is \Sexpr{seed}. For each given $\alpha$ an optimal lambda is definded as largest value of lambda such that error is within 1 standard error of the minimum. (parameter  type.min = 'lambda.1se').
 
 <<interval_search_cox, echo=F, results=hide, cache=TRUE>>=
   # fix folds for each model
@@ -547,15 +560,18 @@ A feature selected by the stability algorithm is in the set of selected features
 \textbf{TODO : plots}
 
 \begin{figure}
+\begin{center}
 <<interval_search_cox_out_plot, echo=F, results=hide, fig=TRUE, height=4>>=
 plot(cvres)
 @
+\end{center}
 \caption{\label{fig:interval_search} \Sexpr{type.measure} as a function of log($\alpha$) for the AML data set. }
 \end{figure}
 
 % 
 % 
 % \begin{figure}
+% \begin{center}
 % <<interval_search_cox_out_plot2, echo=F, results=hide, fig=TRUE, height=4>>=
 % 
 % par(las=3)
@@ -569,6 +585,7 @@ plot(cvres)
 % plot(cbind(alphas,lambdas),  xlab="alpha", ylab="lambda", type="p")
 % 
 % @
+% \end{center}
 % \caption{\label{fig:interval_search2} \Sexpr{type.measure} as a function of $\alpha$ for the AML data set. err ewr 22222}
 % \end{figure}
 % 
@@ -579,11 +596,11 @@ plot(cvres)
 \clearpage
 \section{Conclusions}
 
-\section{Session Information}
-The version number of \R{} and packages loaded for generating the vignette were:
-<<sessionInfo, echo=FALSE, results=tex>>=
-toLatex(sessionInfo())
-@
+%\section{Session Information}
+%The version number of \R{} and packages loaded for generating the vignette were:
+%<<sessionInfo, echo=FALSE, results=tex>>=
+%toLatex(sessionInfo())
+%@
 
 \clearpage
 \bibliographystyle{model2-names}
